# bletchmame

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.rtf  Makefile  README.md  app.cpp  bletchmame.desktop  bletchmame.metainfo.xml  bletchmame.sln  bletchmame.vcxproj  bletchmame.wxs  client.cpp  client.h  frame.cpp  generate_version_gen_cpp.py  job.cpp  listxmltask.cpp  listxmltask.h  make-msi-wix310.bat  make-msi.bat  payloadevent.h  prefs.cpp  prefs.h  runmachinetask.cpp  runmachinetask.h  task.h  test_mame_interactions.sh  test_worker_ui.sh  utility.cpp  utility.h  version.py
.github/workflows/: linux.yml  linux_clang.yml  linux_gcc.yml  main.yml  windows.yml  windows_msvc2019.yml  windows_msvc2022.yml  windows_msys2.yml
CMakeModules/: FindEXPAT.cmake
lib/quazip/: JlCompress.cpp  JlCompress.h  minizip_crypt.h  qioapi.cpp  quagzipfile.h  quaziodevice.h  quazip.h  quazipfileinfo.cpp  unzip.cpp  unzip.h  zip.cpp  zip.h
plugins/worker_ui/: init.lua  plugin.json
scripts/: bletchmame_build_msvc.sh  bletchmame_build_msvc2019.sh  bletchmame_build_msvc2019_dbg.sh  bletchmame_build_msys2.sh  expat_build_msvc.sh  expat_build_msvc2019.sh  expat_build_msvc2019_dbg.sh  expat_retrieve.sh  liblzma_build_msvc.sh  lzma_build_msvc.sh  lzma_build_msys2.sh  mame_versions_to_test.txt  process_version.pl  qt6_build_msys2.sh  qt6_retrieve.sh  qt_build_msys2.sh  qt_retrieve.sh  quazip_build_msvc.sh  quazip_build_msvc2019.sh  quazip_build_msvc2019_dbg.sh  quazip_build_msys2.sh  quazip_retrieve.sh  run_mame_integration_testing.sh  test_mame_interactions.sh  validate_dllimports.pl  zlib_build_msvc.sh  zlib_build_msvc2019.sh  zlib_build_msvc2019_dbg.sh  zlib_retrieve.sh
src/: 7zip.cpp  7zip.h  app.cpp  assetfinder.cpp  assetfinder.h  audit.cpp  audit.h  auditablelistitemmodel.h  auditcursor.cpp  auditcursor.h  auditqueue.cpp  auditqueue.h  audittask.cpp  audittask.h  bindata.h  bletchmame.rc  bletchmame.vcxproj  buildversion.cpp  buildversion.h  chd.cpp  chd.h  client.cpp  client.h  collectionlistview.cpp  collectionlistview.h  collectionviewmodel.cpp  collectionviewmodel.h  devstatusdisplay.cpp  devstatusdisplay.h  dlgconsole.cpp  dlgconsole.h  dlgimages.cpp  dlgimages.h  dlginputs.cpp  dlginputs.h  dlginvoke.cpp  dlginvoke.h  dlgloading.cpp  dlgloading.h  dlgpaths.cpp  (+102 more)
src/dialogs/: about.cpp  about.h  about.ui  audit.cpp  audit.h  audit.ui  audititemmodel.cpp  audititemmodel.h  cheats.cpp  cheats.h  cheats.ui  choosesw.cpp  choosesw.h  choosesw.ui  confdev.cpp  confdev.h  confdev.ui  confdevmodel.cpp  confdevmodel.h  console.cpp  console.h  console.ui  customizefields.cpp  customizefields.h  customizefields.ui  images.cpp  images.h  images.ui  importmameini.cpp  importmameini.h  importmameini.ui  inputs.cpp  inputs.h  inputs.ui  inputs_base.cpp  inputs_base.h  inputs_base.ui  inputs_multiaxis.cpp  inputs_multiaxis.h  inputs_multiaxis.ui  (+25 more)
src/tests/: assetfinder_test.cpp  audit_test.cpp  auditcursor_test.cpp  auditqueue_test.cpp  audittask_test.cpp  chd_test.cpp  client_test.cpp  devstatusdisplay_test.cpp  hash_test.cpp  history_test.cpp  identifier_test.cpp  importmameinijob_test.cpp  info_builder_test.cpp  info_test.cpp  iniparser_test.cpp  listxmlrunner.cpp  listxmltask_test.cpp  liveinstancetracker_test.cpp  machinefoldertreemodel_test.cpp  machinelistitemmodel_test.cpp  mainpanel_test.cpp  mamerunner.cpp  mamerunner.h  mametask_test.cpp  mameversion_test.cpp  perfprofiler_test.cpp  prefs_test.cpp  profile_test.cpp  resources.qrc  runmachinetask_test.cpp  softwarelist_test.cpp  softwarelistitemmodel_test.cpp  status_test.cpp  test.cpp  test.h  throttler_test.cpp  utility_test.cpp  xmlparser_test.cpp
src/tests/dialogs/: about_test.cpp  confdevmodel_test.cpp  inputs_test.cpp  paths_test.cpp  pathslistviewmodel_test.cpp
src/tests/resources/: history.xml  listxml.xml  listxml_alienar.xml  listxml_coco.xml  listxml_fake.xml  prefs.xml  sample_archive.7z  samplechd.chd  status_mame0226_coco2b_1.xml  status_mame0227_coco2b_1.xml  testini.ini  testmameini.ini
src/tests/scripts/: hard_reset.xml  input.xml  profiler.xml  recording.xml  simple.xml  snap.xml  soft_reset.xml  state.xml
